# slide

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KUDOS.md  LICENSE  README.md  ladder
editor/language_server/: Cargo.toml  README.md
editor/language_server/src/: ast.rs  document.rs  document_registry.rs  init.rs  lsp.rs  program.rs  ptr.rs  server.rs  shims.rs  utils.rs
editor/language_server/src/document/: document_parser.rs  mod.rs  parser.rs  registry.rs  response.rs
editor/language_server/src/document_registry/: document.rs  document_parser.rs  response.rs  source_map.rs
editor/language_server/src/program/: services.rs
editor/language_server/src/program/services/: actions.rs  annotations.rs  completions.rs  definitions.rs  diagnostics.rs  folding_ranges.rs  format.rs  highlight.rs  hover.rs  local_response.rs  references.rs  rename.rs  response.rs  selection_ranges.rs  symbols.rs
editor/language_server/src/services/: actions.rs  completions.rs  definitions.rs  highlight.rs  hover.rs  mod.rs  references.rs
editor/language_server/src/tests/: actions.rs  code_action.rs  code_lens.rs  completion.rs  completions.rs  definitions.rs  diagnostics.rs  document_symbol.rs  folding_range.rs  formatting.rs  highlight.rs  hover.rs  mocks.rs  mod.rs  prepare_rename.rs  range_formatting.rs  references.rs  rename.rs  selection_range.rs  utils.rs  workspace_symbol.rs
libslide/: Cargo.toml
libslide/benches/bignum/: add.rs  compare.rs  constructor.rs  modulo.rs  mul.rs  sub.rs
libslide/benches/bignum/utils/: fft.rs
libslide/benches/math/: gcd.rs  gcd_poly_zz.rs
libslide/src/: bignum.rs  common.rs  diagnostics.rs  emit.rs  evaluator_rules.rs  grammar.rs  interpreter.rs  lib.rs  linter.rs  parser.rs  partial_evaluator.rs  printer.rs  rug_arith.rs  scanner.rs  types.rs  utils.rs  visitor.rs
libslide/src/bignum/: add.rs  compare.rs  complex.rs  modulo.rs  mul.rs  negate.rs  sub.rs  utils.rs
libslide/src/evaluator_rules/: mod.rs  pattern_match.rs  pattern_matching.rs  registry.rs  rule.rs  unbuilt_rule.rs  variables.rs
libslide/src/evaluator_rules/registry/: fn_rules.rs
libslide/src/grammar/: collectors.rs  expression_pattern.rs  intern.rs  mem.rs  pattern.rs  statement.rs  transformer.rs  visit.rs  visitor.rs
libslide/src/linter/: expr_pat.rs  stmt.rs
libslide/src/linter/expr_pat/: similar_names.rs
libslide/src/linter/stmt/: homogenous_assignment.rs  redundant_nesting.rs  unary_series.rs
libslide/src/math/: fraction.rs  gcd.rs  gcd_poly_zz.rs  mod.rs  poly.rs
libslide/src/parser/: errors.rs  expression_parser.rs  expression_pattern_parser.rs  statement_parser.rs  test_utils.rs  types.rs
libslide/src/partial_evaluator/: compare.rs  errors.rs  flatten.rs  types.rs  variable_expand.rs
libslide/src/partial_evaluator/validate/: incompatible_definitions.rs  mod.rs
libslide/src/scanner/: .types.rs.swo  errors.rs  options.rs  types.rs
libslide/src/utils/: grammar.rs  hash.rs  iter.rs  string.rs  test.rs
slide/: Cargo.toml
slide/fuzz/: Cargo.toml
slide/fuzz/fuzz_targets/: slide.rs
slide/fuzz/seed/: KGEgKiBiKSAtIChhICogYik=  KGEgKyAwKSAtIDA=  KGEpICsgKDEp  KHheNCArIDEweF4zICsgMzV4XjIgKyA1MHggKyAyNCkgLyAoeCArIDEp  MCArIGEgKyAw  MSArIC0y  MSArIC8=  MSArICU=  MSArICgyICo=  MSArICgyICogMw==  MSArIDIgKiAzIC8gNCBe  MSArIDIgLSBiICsgMyAtIGI=  MSArIDUgLyAxMCArIDI=  MSArIHZhcg==  MSAtIDA=  MTAgLyAyeCAvIDUgLyAyIC8gNHg=  MTEAGjAwMDAwMDAwLjAwMDAxMQAaMDAwMDAwMDAuMDAwMDAwMDA0ABowMDAwMDAwMC4wMDAwMDAwMDAwMDA0ABowMDAwMDAwMC4wMDU1NTU1NTU1NTU1NTU1NTU1NT  MiAqIDMgKiBh  MiBeIDMgXiAy  MiBeIDMgXiBh  NiAlIDQ=  NiAlIDQgJSBh  NiAvIDIgLyAz  OSAlIDUgJSA1  OSAqIDMyIEAgNCB+IDEwIC0gNQ==  W2FdICsgWzFd  X2EgKyAkYiAtI2MgKyAxIDIKMyA0IDUgNiAvIDcgXiA4CiAgOQ==  YSAqICsoYiArIGMp  YSArIDEgKyAy  YSArIDEgLSAx  YSAtIDA=  eCAqIDIgLyB5IC8gKDUgLyAoeCAvIHkpKQ==  eCAqIHg=  eCAqIHheMg==  eF4oeCArIDIpIC8geF4oNSArIHkp  eF4yICogeA==
slide/src/: diagnostics.rs  lib.rs  main.rs
slide/src/test/: README.md  common.rs  exec.rs  latex_emit_test.rs  mod.rs  slide_emit_test.rs
slide/src/test/ui/: add.slide  add_1_1_1.slide  add_nested_with_reorder.slide  add_x_1_2.slide  additive_identity_any.slide  additive_identity_const.slide  additive_identity_nested.slide  additive_identity_var.slide  additive_identity_with_reorder.slide  additive_inverse_any.slide  additive_inverse_const.slide  additive_inverse_nested.slide  additive_inverse_var.slide  additive_inverse_with_reorder.slide  cancel_1.slide  cancel_2.slide  cancel_3.slide  cancel_4.slide  distribute_negation.slide  distribute_negation_nested.slide  distribute_negation_with_eval.slide  div.slide  div_associated.slide  div_nested_left.slide  extra_items.slide  extra_items_expr_pat.slide  flatten_div_1.slide  flatten_div_2.slide  flatten_mul_1.slide  flatten_mul_2.slide  flattened_addition.slide  giant_float.slide  hex.slide  issue_222.slide  issue_240.slide  issue_248.slide  issue_251_1.slide  issue_251_2.slide  issue_254.slide  issue_92.slide  (+30 more)
slide/src/test/ui/assign/: assign.slide
slide/src/test/ui/cli/: help.slide
slide/src/test/ui/emit/: debug.slide  latex.slide  pretty.slide
slide/src/test/ui/error/: define-assign.slide  expected_close_bracket.slide  expected_close_bracket_eof.slide  expected_close_paren.slide  expected_close_paren_eof.slide  expected_expr_found_div.slide  expected_expr_found_eof.slide  expected_expr_found_mod.slide  (+8 more)
(+178 files in other folders)
