[package]
name = "libslide"
version = "0.0.0"
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
edition = "2018"

[features]
benchmark-internals = []

[[bench]]
name = "gcd"
path = "benches/math/gcd.rs"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "gcd_poly"
path = "benches/math/gcd_poly_zz.rs"
harness = false
required-features = ["benchmark-internals"]

[dependencies]
rug = "1.9.0"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["std"]

[dev-dependencies]
criterion = "0.3.2"
