[package]
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
description = "Library for slide, a static expression optimizer."
edition = "2018"
license-file = "../LICENSE"
name = "libslide"
readme = "../README.md"
repository = "https://github.com/yslide/slide"
version = "0.0.1"
workspace = ".."

[[bench]]
harness = false
name = "gcd"
path = "benches/math/gcd.rs"
required-features = ["benchmark-internals"]

[[bench]]
harness = false
name = "gcd_poly"
path = "benches/math/gcd_poly_zz.rs"
required-features = ["benchmark-internals"]

[dependencies]
bitflags = "1.2.1"
lasso = "0.5.0"
lazy_static = "1.4.0"
strtod = "0.0.1"

[dependencies.num-traits]
default-features = false
features = ["std"]
version = "0.2"

[dev-dependencies]
criterion = "0.3.2"

[features]
benchmark-internals = []
