[package]
name = "slide"
version = "0.0.1"
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
edition = "2018"

[dependencies]
libslide = { path = "../libslide" }
clap = "2.33.1"
annotate-snippets = { version = "0.8.0", features = ["color"] }
termcolor = "1.1.0"
atty = "0.2.14"

[[test]]
name = "system_tests"
path = "src/test/mod.rs"
harness = false

[dev-dependencies]
libtest-mimic = { git = "https://github.com/ayazhafiz/libtest-mimic", branch = "master" }
difference = "2.0.0"
