[package]
name = "slide"
description = "A static expression optimizer."
version = "0.0.1"
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
license-file = "../LICENSE"
readme = "../README.md"
workspace = ".."
repository = "https://github.com/yslide/slide"
edition = "2018"

[lib]
# For wasm :-)
crate-type = ["cdylib", "rlib"]

[dependencies]
libslide = { path = "../libslide" }
clap = "2.33.1"
annotate-snippets = { version = "0.9.0", features = ["color"] }
termcolor = "1.1.0"
atty = "0.2.14"

# For feature wasm
wasm-bindgen = { version = "0.2.67", optional = true, features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.114", optional = true, features = ["derive"] }

[[test]]
name = "system_tests"
path = "src/test/mod.rs"
harness = false

[dev-dependencies]
slide = { path = "." }
difference = "2.0.0"
image = "0.23"
lazy_static = "1.4.0"
lcs-image-diff = { version = "0.1.7", default-features = false }
libtest-mimic = { git = "https://github.com/ayazhafiz/libtest-mimic", branch = "master" }
reqwest = { version = "0.11.0", features = ["blocking"] }

[features]
wasm = ["wasm-bindgen", "wee_alloc", "serde"]
