[package]
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
edition = "2018"
name = "slide_ls"
version = "0.0.0"

[[bin]]
name = "slide_ls"
path = "src/server.rs"

[dependencies]
parking_lot = "0.11.0"
regex = "1.4.1"
serde_json = "1.0.59"
tower-lsp = "0.13.3"

[dependencies.libslide]
path = "../../libslide"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dependencies.tokio]
features = [
    "macros",
    "tcp",
    "io-std",
    "rt-core",
]
version = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
serde_json = "1.0.59"
tower-test = "0.3.0"
